--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
 .idea
+/homework_1/project
+/homework_1/target
+
+/homework_1/project
+/homework_1/target
+
+/homework_2/project
+/homework_2/target
+
+/homework_3/project
+/homework_3/target
+
+/homework_4/project
+/homework_4/target
